fixed display of content being too high

--- a/app/css/main.css
+++ b/app/css/main.css
@@ -36,6 +36,7 @@ section {
     min-height: -moz-calc(100% - 64px);
     min-height: calc(100% - 64px);
     padding: 30px 40px;
+    margin-top: 55px;
 }
 .sprite {
 	background-image: url("/img/sprite.png") !important;
@@ -113,7 +114,7 @@ nav.navbar .navbar-brand a span {
 .nav-sidebar > li > a:link, 
 .nav-sidebar > li > a:visited {
     text-decoration: none;
-    color: #FFFFFF !important;
+    color: #ffffff !important;
     cursor: pointer;
     outline: 0;
 }
@@ -179,7 +180,7 @@ li.panel > ul.nav > li > a,
 li.panel > ul.nav > li > a:link, 
 li.panel > ul.nav > li > a:visited {
     text-decoration: none;
-    color: #FFFFFF !important;
+    color: #ffffff !important;
     cursor: pointer;
     outline: 0;
 }
